--- a/src/styles.css
+++ b/src/styles.css
@@ -1,16 +1,20 @@
-:root {
-
-	--primary-color: #FFFFFF;
-	--secondary-color: #FFFFFF;
-
-}
-
 body {
 	display: flex;
 	flex-direction: column;
 	height: 100vh;
 	margin: 0;
 	padding: 0;
+	background: linear-gradient(#6fb1fc, #4286f4);
+}
+
+.body {
+	display: flex;
+	flex-direction: column;
+	flex: 4;
+	background: linear-gradient(#6fb1fc, #4286f4);
+
+	align-items: center;
+	padding-top: 50px;
 }
 
 .loader {
@@ -40,9 +44,33 @@ body {
 
 
 
-
 #city--search {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 	margin-bottom: 40px;
+
+}
+
+.search--bar{
+	margin-top: 10px;
+}
+
+.input--label{
+	font-weight: 600;
+	font-size: 1.3rem;
+	margin-bottom: 20px;
+}
+
+#city--input{
+	border-radius: 10px;
+	width: 20rem;
+	height: 2rem;
+}
+
+.submit{
+	width: 4rem;
+	height: 2rem;
 }
 
 .weathercard>p,
@@ -53,27 +81,19 @@ body {
 
 .header {
 	display: flex;
-	justify-content: center;
 	align-items: center;
 	padding: 10px;
-	flex: 0.3;
+	flex: 0.2;
 	background-color: lightcoral;
 }
 
-.body {
-	display: flex;
-	flex-direction: column;
-	flex: 4;
-	background-color: lightblue;
 
-	align-items: center;
-	padding-top: 50px;
-}
 
 .weathercard {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	justify-content: space-around;
 	height: 50%;
 	width: 40%;
 	max-width: 20%;
