--- a/src/styles.css
+++ b/src/styles.css
@@ -4,14 +4,18 @@ body {
 	height: 100vh;
 	margin: 0;
 	padding: 0;
-	background: linear-gradient(#6fb1fc, #4286f4);
+}
+
+input:focus{
+	border: 2px solid red;
+	outline: none;
 }
 
 .body {
 	display: flex;
 	flex-direction: column;
 	flex: 4;
-	background: linear-gradient(#6fb1fc, #4286f4);
+	background: linear-gradient(#178bad, #184f77);
 
 	align-items: center;
 	padding-top: 50px;
@@ -53,6 +57,8 @@ body {
 }
 
 .search--bar{
+	display: flex;
+	align-items: center;
 	margin-top: 10px;
 }
 
@@ -66,11 +72,17 @@ body {
 	border-radius: 10px;
 	width: 20rem;
 	height: 2rem;
+	background-color: #0e2d44;
+	border:none;
+	color: #ffffff;
+	font-size: 1.2rem;
+	padding: 7px;
 }
 
 .submit{
 	width: 4rem;
 	height: 2rem;
+	margin:15px;
 }
 
 .weathercard>p,
